--- a/EventManagement/EventManagement/Views/UserView.axaml
+++ b/EventManagement/EventManagement/Views/UserView.axaml
@@ -61,7 +61,7 @@
 							Foreground="White" FontSize="16"
 							Width="180" Height="45"
 							HorizontalContentAlignment="Center"
-							HorizontalAlignment="Center">
+							HorizontalAlignment="Center" IsVisible="{Binding IsVisible}">
 						<TextBlock Text="Зарегистрировать"
 								   TextWrapping="Wrap" TextAlignment="Center"/>
 					</Button>
@@ -71,8 +71,8 @@
 			<!--Правая сторона-->
 			<StackPanel Spacing="20" Grid.Column="1" HorizontalAlignment="Center" Margin="0,0,190,0">
 				<Button Content="Мероприятия" Width="200" Height="100" HorizontalAlignment="Center"/>
-				<Button Content="Участники" Width="200" Height="100" HorizontalAlignment="Center"/>
-				<Button Content="Жюри" Width="200" Height="100" HorizontalAlignment="Center"/>
+				<Button Content="Участники" Width="200" Height="100" HorizontalAlignment="Center" IsVisible="{Binding IsVisible}"/>
+				<Button Content="Жюри" Width="200" Height="100" HorizontalAlignment="Center" IsVisible="{Binding IsVisible}"/>
 			</StackPanel>		
 		</Grid>
 	</Grid>		
