--- a/EventManagement/EventManagement/Views/UserView.axaml
+++ b/EventManagement/EventManagement/Views/UserView.axaml
@@ -56,7 +56,7 @@
 					   Width="180" Height="200"/>
 				</Border>
 				<StackPanel Spacing="15">
-					<Button Content="Мой профиль" Width="180" Height="80" HorizontalAlignment="Center"/>
+					<Button Content="Мой профиль" Width="180" Height="80" HorizontalAlignment="Center" Command="{Binding GoToProfileView}"/>
 					<Button Background="#45adff" Grid.Column="1"
 							Foreground="White" FontSize="16"
 							Width="180" Height="45"
