Сделал окно с выводом Жюри, разобрался окончательно при каких условиях работает перенос текста

--- a/EventManagement/EventManagement/Views/UserView.axaml
+++ b/EventManagement/EventManagement/Views/UserView.axaml
@@ -71,8 +71,8 @@
 			<!--Правая сторона-->
 			<StackPanel Spacing="20" Grid.Column="1" HorizontalAlignment="Center">
 				<Button Content="Мероприятия" Width="380" Height="100" HorizontalAlignment="Center" Command="{Binding GoToMainView}"/>
-				<Button Content="Участники" Width="380" Height="100" HorizontalAlignment="Center" IsVisible="{Binding IsVisibleParticipants}"/>
-				<Button Content="Жюри" Width="380" Height="100" HorizontalAlignment="Center" IsVisible="{Binding IsVisibleJury}"/>
+				<Button Content="Участники" Width="380" Height="100" HorizontalAlignment="Center" IsVisible="{Binding IsVisibleParticipants}" Command="{Binding GoToParticipantsView}"/>
+				<Button Content="Жюри" Width="380" Height="100" HorizontalAlignment="Center" IsVisible="{Binding IsVisibleJury}" Command="{Binding GoToJuryView}"/>
 			</StackPanel>		
 		</Grid>
 	</Grid>		
