--- a/EventManagement/EventManagement/Views/UserView.axaml
+++ b/EventManagement/EventManagement/Views/UserView.axaml
@@ -57,7 +57,8 @@
 				</Border>
 				<StackPanel Spacing="15">
 					<Button Content="Мой профиль" Width="180" Height="80" HorizontalAlignment="Center" Command="{Binding GoToProfileView}"/>
-					<Button Background="#45adff" Grid.Column="1"
+					<Button Command="{Binding GoToRegistrationView}"
+							Background="#45adff" Grid.Column="1"
 							Foreground="White" FontSize="16"
 							Width="180" Height="45"
 							HorizontalContentAlignment="Center"
