--- a/EventManagement/EventManagement/Views/MainWindow.axaml
+++ b/EventManagement/EventManagement/Views/MainWindow.axaml
@@ -6,8 +6,8 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="EventManagement.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
-        Icon="/Assets/avalonia-logo.ico"
-        Title="EventManagement"
+        Icon="/Assets/logo.png"
+        Title="Управление мероприятиями"
 		Background="#1C2331"
 		MinHeight="670" MinWidth="900">
 
